--- a/android/res/values-pl/strings.xml
+++ b/android/res/values-pl/strings.xml
@@ -1006,4 +1006,28 @@
 	<string name="traffic_update_maps_text">Aby wyświetlić dane o ruchu, muszą zostać zaktualizowane mapy.</string>
 	<string name="traffic_outdated">Dane o ruchu są przestarzałe.</string>
 	<string name="big_font">Większe etykiety</string>
+	<!-- december -->
+	<string name="whatsnew_traffic">Dane o ruchu w 36 krajach</string>
+	<!-- december -->
+	<string name="whatsnew_traffic_text">Bieżące dane o ruchu drogowym oraz oparte o nie najszybsze trasy!</string>
+	<!-- december -->
+	<string name="whatsnew_traffic_roaming">Dane o ruchu w trybie roamingu</string>
+	<!-- december -->
+	<string name="whatsnew_traffic_roaming_text">Wymaga mniej niż 1 MB transferu mobilnego w ciągu 1 podróży.</string>
+	<!-- december -->
+	<string name="whatsnew_order_taxi">Zamów taksówkę</string>
+	<!-- december -->
+	<string name="whatsnew_order_taxi_text">Większość stron z lokalizacjami zawiera teraz przycisk do zamówienia taksówki.</string>
+	<!-- january -->
+	<string name="whatsnew_improved_search">Poprawiona opcja wyszukiwania</string>
+	<!-- january -->
+	<string name="whatsnew_improved_search_text">Dokładne wyniki wyszukiwania nawet przy błędnych zapytaniach.</string>
+	<!-- january -->
+	<string name="whatsnew_filters_in_search">Filtry wyszukiwania</string>
+	<!-- january -->
+	<string name="whatsnew_filters_in_search_text">Szukaj hoteli w oparciu o cenę i oceny.</string>
+	<!-- january -->
+	<string name="whatsnew_font_size">Rozmiar czcionki</string>
+	<!-- january -->
+	<string name="whatsnew_font_size_text">Etykiety na mapie dają się powiększyć.</string>
 </resources>
