--- a/android/res/values-sk/strings.xml
+++ b/android/res/values-sk/strings.xml
@@ -1002,4 +1002,28 @@
 	<string name="traffic_update_maps_text">Na zobrazenie dopravných informácií je potrebné aktualizovať mapy.</string>
 	<string name="traffic_outdated">Dopravné informácie sú neaktuálne.</string>
 	<string name="big_font">Väčšie nápisy</string>
+	<!-- december -->
+	<string name="whatsnew_traffic">Dopravné informácie v 36 krajinách</string>
+	<!-- december -->
+	<string name="whatsnew_traffic_text">Aktuálne dopravné informácie a na základe nich najrýchlejšie trasy!</string>
+	<!-- december -->
+	<string name="whatsnew_traffic_roaming">Dopravné informácie v roamingu</string>
+	<!-- december -->
+	<string name="whatsnew_traffic_roaming_text">Vyžaduje menej ako 1 MB mobilných dát na jazdu.</string>
+	<!-- december -->
+	<string name="whatsnew_order_taxi">Objednajte si taxík</string>
+	<!-- december -->
+	<string name="whatsnew_order_taxi_text">Väčšina stránok o lokalite odteraz obsahuje aj tlačidlo na objednávanie taxíka.</string>
+	<!-- january -->
+	<string name="whatsnew_improved_search">Vylepšené vyhľadávanie</string>
+	<!-- january -->
+	<string name="whatsnew_improved_search_text">Presné výsledky vyhľadávania aj s nesprávne zadanými dotazmi.</string>
+	<!-- january -->
+	<string name="whatsnew_filters_in_search">Vyhľadávacie filtre</string>
+	<!-- january -->
+	<string name="whatsnew_filters_in_search_text">Hľadať hotely podľa ceny a hodnotenia.</string>
+	<!-- january -->
+	<string name="whatsnew_font_size">Veľkosť písma</string>
+	<!-- january -->
+	<string name="whatsnew_font_size_text">Nápisy na mape je možné zväčšiť.</string>
 </resources>
