--- a/iphone/Maps/nl.lproj/Localizable.strings
+++ b/iphone/Maps/nl.lproj/Localizable.strings
@@ -1753,3 +1753,39 @@
 "banner_viator_title" = "Online tour search";
 
 "banner_viator_message" = "Search in over 50,000 tours all over the world.";
+
+/* december */
+"whatsnew_traffic" = "Verkeersgegevens in 36 Landen";
+
+/* december */
+"whatsnew_traffic_text" = "Actuele verkeersinformatie, en de snelste reisroutes hierop gebaseerd!";
+
+/* december */
+"whatsnew_traffic_roaming" = "Verkeersinfo in Roaming";
+
+/* december */
+"whatsnew_traffic_roaming_text" = "Vereist minder dan 1 MB mobiele bandbreedte per trip.";
+
+/* december */
+"whatsnew_order_taxi" = "Bestel een Taxi";
+
+/* december */
+"whatsnew_order_taxi_text" = "De meeste locatiepagina's bevatten nu een knop om een taxi te bestellen.";
+
+/* january */
+"whatsnew_improved_search" = "Verbeterde Zoekfunctie";
+
+/* january */
+"whatsnew_improved_search_text" = "Zelfs verkeerd gespelde zoekopdrachten geven nauwkeurige zoekresultaten.";
+
+/* january */
+"whatsnew_filters_in_search" = "Zoekfilters";
+
+/* january */
+"whatsnew_filters_in_search_text" = "Hotels zoeken gebaseerd op prijs en rating.";
+
+/* january */
+"whatsnew_font_size" = "Lettergrootte";
+
+/* january */
+"whatsnew_font_size_text" = "Labels op de map kunnen groter gemaakt worden.";
